# parsimony-agents

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.old.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  integration-nightly.yml  publish.yml  test.yml
docs/: API.md  ARCHITECTURE.md  CODEMAPS.md  COMMANDS.md  INDEX.md  RUNBOOK.md  api-reference.md  architecture.md  deployment.md  index.md  user-guide.md
docs/concepts/: artifacts.md  code-execution.md  connectors.md  events.md  failure-and-recovery.md  how-it-works.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: embedding-in-a-host.md  multi-turn.md  retrieval-rag.md  saving-loading-artifacts.md  sql-and-documents.md  streaming-and-displaying-results.md  suspend-resume.md
docs/reference/: agent-tools.md  agent.md  artifacts.md  environment.md  events.md  execution.md  io.md  public-api.md
examples/: event_stream.py  quickstart.py  sec_edgar.py  snb.py  terminal_chat.py  usage_patterns.py
ockham_agents/: __init__.py  artifacts.py  display.py  notebook.py  theme.py  tools.py  variable.py  views.py
ockham_agents/agent/: __init__.py  agent.py  helpers.py  models.py  outputs.py  prompts.py  tracing.py
ockham_agents/execution/: __init__.py  dataframe_ref.py  executor.py  factory.py  fetch_log.py  helpers.py  metadata.py  outputs.py  pagination.py
ockham_agents/quality/: __init__.py  data.py  lints.py
ockham_agents/rag/: __init__.py  keyword_store.py  vector_store.py
ockham_agents/rag/processors/: __init__.py  base.py  output.py
parsimony_agents/: __init__.py  _naming.py  artifacts.py  chart_io.py  closure.py  dataset_io.py  display.py  identity.py  lineage_diff.py  messages.py  notebook.py  notebook_io.py  refresh.py  report_format.py  report_io.py  storage.py  theme.py  tools.py  util.py  variable.py  views.py  virtual_path.py
parsimony_agents/agent/: __init__.py  agent.py  caching.py  cancellation.py  config.py  events.py  helpers.py  llm.py  local_store.py  loop.py  models.py  outputs.py  prompts.py  renderer.py  seen_refs.py  session_state.py  state.py  termination_tools.py  tracing.py  workspace_hooks.py  xml_render.py
parsimony_agents/agent/failure/: __init__.py  detectors.py  kinds.py  policy.py  recovery.py  suspension.py  termination.py
parsimony_agents/execution/: __init__.py  artifact_store.py  connector_cache.py  data_objects.py  dataframe_ref.py  documents.py  executor.py  factory.py  fetch_log.py  helpers.py  load.py  metadata.py  outputs.py  pagination.py  parquet_helpers.py  run_scope.py  sanitize.py  summaries.py
parsimony_agents/execution/sandbox/: __init__.py  connector_rpc.py  executor.py  kernel.py  protocol.py  spawn.py
parsimony_agents/quality/: __init__.py  data.py  lints.py
parsimony_agents/rag/: __init__.py  embeddings.py  keyword_store.py  vector_store.py
parsimony_agents/rag/processors/: __init__.py  base.py  output.py
tests/: test_agent_convenience.py  test_agent_resume.py  test_agent_return_ordering.py  test_agent_return_termination.py  test_artifact_store.py  test_caching.py  test_chart_io.py  test_closure.py  test_code_executor_concurrency.py  test_code_executor_imports.py  test_compaction_policy.py  test_connector_catalog.py  test_connector_memoization.py  test_connector_proxy.py  test_connector_skills.py  test_data_objects.py  test_dataframe_ref_unhashable.py  test_dataset_io.py  test_display.py  test_documents.py  test_edit_report.py  test_error_sanitization.py  test_executor_timeout.py  test_file_truth_contract.py  test_governed_render_handles.py  test_identity.py  test_kernel_output_fetch_log.py  test_lineage_diff.py  test_lints_raw_parquet_io.py  test_list_workspace_files_dotpaths.py  test_llm.py  test_load_dataset.py  test_local_store.py  test_loop.py  test_naming.py  test_notebook_io.py  test_output_factory.py  test_persistence_integration.py  test_phase2.py  test_prefix_stability.py  (+27 more)
tests/failure/: test_detectors.py  test_kinds.py  test_policy.py  test_recovery.py  test_state.py
tests/integration/: test_virtual_path_round_trip.py
