[project]
name = "parsimony-agents"
version = "0.1.0"
description = "AI agent framework for data analysis — write and execute Python code to answer questions about data"
authors = [{ name = "Ockham.sh", email = "team@ockham.sh" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
keywords = ["agent", "ai", "data-analysis", "llm", "code-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "parsimony-core>=0.1.0",
    "pydantic>=2.11.1,<3",
    "pandas>=2.3.3,<3",
    "numpy>=1.24.0,<3",
    "httpx>=0.28.1",
    "litellm",
    "altair>=6.0.0,<7",
    "vl-convert-python>=1.8.0,<2",
    "dateparser>=1.3.0,<2",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "tantivy>=0.25.0",
    "opentelemetry-api>=1.20.0"
]

[project.optional-dependencies]
rag = ["chromadb>=1.4.0,<2", "tantivy>=0.25.0,<1"]
sql = ["duckdb>=1.4.3,<2"]
display = ["rich>=14.0.0"]
all = ["parsimony-agents[rag,sql,display]"]

[project.urls]
Homepage = "https://parsimony.dev"
Repository = "https://github.com/ockham-sh/parsimony-agents"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.uv.sources]
parsimony-core = { path = "../parsimony", editable = true }
litellm = { git = "https://github.com/espinetandreu/litellm.git", rev = "db745405eb84f2c693599f6959d21af0785e7bf5" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
